--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
                 </section>
                 
                 <section class="nav-container-endsec">
-                    <div class="navbar-icons">
+                    <a href="pages/login.html" class="navbar-icons">
                         <i class="far fa-user fa-lg"></i>
                         <span>login</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="pages/wishlist.html" class="navbar-icons">
                         <i class="far fa-heart fa-lg"></i>
                         <span>favourities</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="pages/product-cart.html" class="navbar-icons">
                         <i class="fal fa-meh-blank fa-lg"></i>
                         <span>cart</span>
-                    </div>
+                    </a>
 
                 </section>
             </nav>
@@ -82,8 +82,9 @@
                     sapiente rem laborum harum quod fugiat officiis?
                 </p>
                 <div class="mgT-20">
-                    <button class="btn solid-pri-btn">shop now</button>
-                    <!-- <button class="btn solid-sec-btn">show now</button> -->
+                    <a href="pages/product-list.html">
+                        <button class="btn solid-pri-btn">shop now</button>
+                    </a>
                 </div>
             </div>
 
