--- a/pages/product-cart.html
+++ b/pages/product-cart.html
@@ -17,8 +17,10 @@
     <section class="product-cart-page">
         <header class="product-page-cart-header">
             <nav class="navigation">
-                <section class="nav-container-startsec">
-                 <img src="../logo/lightning64px.png" alt="">
+                <section class="nav-container-startsec">  
+                      <a href="../index.html">
+                    <img src="../logo/lightning64px.png" alt="">
+                   </a>
                  <span class="nav-title">flash.store</span>
                 </section>
 
@@ -33,18 +35,18 @@
                 </section>
                 
                 <section class="nav-container-endsec">
-                    <div class="navbar-icons">
+                    <a href="login.html" class="navbar-icons">
                         <i class="far fa-user fa-lg"></i>
                         <span>login</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="wishlist.html" class="navbar-icons">
                         <i class="far fa-heart fa-lg"></i>
                         <span>favourities</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="product-cart.html" class="navbar-icons">
                         <i class="fal fa-meh-blank fa-lg"></i>
                         <span>cart</span>
-                    </div>
+                    </a>
 
                 </section>
             </nav>
