--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -19,8 +19,8 @@
             <nav class="navigation">
                 <section class="nav-container-startsec">
                     <a href="../index.html">
-                        <img src="../logo/lightning64px.png" alt="">
-                    </a>
+                 <img src="../logo/lightning64px.png" alt="">
+                </a>
                  <span class="nav-title">flash.store</span>
                 </section>
 
@@ -62,23 +62,36 @@
                     </div>
 
                     <div class="input-box mgT-20">
+                        <label for="first-name" class="textarea-label" >first name</label>
+                        <input id="first-name" type="text" class="input" placeholder="First Name" valide>
+                    </div>
+                    
+                    <div class="input-box mgT-20">
+                        <label for="last-name" class="textarea-label" >last name</label>
+                        <input id="last-name" type="email" class="input" placeholder="Last Name" valide>
+                    </div>
+
+                    <div class="input-box mgT-20">
                         <label for="password" class="textarea-label" >password</label>
                         <input id="password" type="password" class="input" placeholder="**********" valide>
+                    </div>
+
+                    <div class="input-box mgT-20">
+                        <label for="confirm-password" class="textarea-label" >confirm password</label>
+                        <input id="confirm-password" type="password" class="input" placeholder="**********" valide>
                     </div>
 
                     <div class="login-remember-ad-forget-pass dis-f">
                         <div class="remen-me mgT-20">
                             <input type="checkbox">
-                            <label class="textarea-label" >Remember Me</label>
+                            <label class="textarea-label" >i accept all terms & conditions </label>
                         </div>
-                        <div class="forget-pass">
-                            <span class="textarea-label" >forget your password?</span>
-                        </div>
+                        
                     </div>
                     <button class="btn solid-pri-btn width100 mgT-20">login</button>
 
-                    <a href="sign-in.html">
-                        <p class="h5 color capitalize fW-500 text-center mgT-20">create new account ></p>
+                    <a href="login.html">
+                        <p class="h5 color capitalize fW-500 text-center mgT-20">already have a account ></p>
                     </a>
 
                 </div>
