--- a/pages/product-list.html
+++ b/pages/product-list.html
@@ -15,7 +15,9 @@
         <header class="product-page-header">
             <nav class="navigation">
                 <section class="nav-container-startsec">
-                 <img src="../logo/lightning64px.png" alt="">
+                    <a href="../index.html">
+                        <img src="../logo/lightning64px.png" alt="">
+                       </a>
                  <span class="nav-title">flash.store</span>
                 </section>
 
@@ -30,18 +32,18 @@
                 </section>
                 
                 <section class="nav-container-endsec">
-                    <div class="navbar-icons">
+                    <a href="login.html" class="navbar-icons">
                         <i class="far fa-user fa-lg"></i>
                         <span>login</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="wishlist.html" class="navbar-icons">
                         <i class="far fa-heart fa-lg"></i>
                         <span>favourities</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="product-cart.html" class="navbar-icons">
                         <i class="fal fa-meh-blank fa-lg"></i>
                         <span>cart</span>
-                    </div>
+                    </a>
 
                 </section>
             </nav>
