--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -18,7 +18,9 @@
         <header class="wishlist-header">
             <nav class="navigation">
                 <section class="nav-container-startsec">
-                 <img src="../logo/lightning64px.png" alt="">
+                    <a href="../index.html">
+                        <img src="../logo/lightning64px.png" alt="">
+                       </a>
                  <span class="nav-title">flash.store</span>
                 </section>
 
@@ -31,20 +33,20 @@
                     </div>
                     
                 </section>
-                
+                <a href=""></a>
                 <section class="nav-container-endsec">
-                    <div class="navbar-icons">
+                    <a href="login.html" class="navbar-icons">
                         <i class="far fa-user fa-lg"></i>
                         <span>login</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="wishlist.html" class="navbar-icons">
                         <i class="far fa-heart fa-lg"></i>
                         <span>favourities</span>
-                    </div>
-                    <div class="navbar-icons">
+                    </a>
+                    <a href="product-cart.html" class="navbar-icons">
                         <i class="fal fa-meh-blank fa-lg"></i>
                         <span>cart</span>
-                    </div>
+                    </a>
 
                 </section>
             </nav>
